samples/_failures_safe/1761595065_45c0e6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7995870a.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_7995870a.c:187:9: error: expected declaration or statement at end of input
  187 |         return;
      |         ^~~~~~
./samples/SAFE/__tmp_7995870a.c:187:9: error: expected declaration or statement at end of input
